Allow player promotion to DM in group